--- a/public/pages/chat.html
+++ b/public/pages/chat.html
@@ -6,13 +6,17 @@
 	</head>
 	<body>
 		<h1>Global Chat</h1>
+		<label for="userName">User Name:</label>
+		<input type="text" id="userName" />
+
 		<ul id="messages"></ul>
 		<form id="chat-form">
 			<input type="text" id="input-message" autocomplete="off" />
 			<button type="submit">Send</button>
 		</form>
+
 		<script>
-			const socket = io(); // Connect to the Socket.IO server
+			const socket = io(); // Connect to the Socket.IO serve
 
 			// Listen for chat message events
 			socket.on("chat message", msg => {
@@ -25,7 +29,8 @@
 			document.getElementById("chat-form").addEventListener("submit", e => {
 				e.preventDefault();
 				const input = document.getElementById("input-message");
-				const message = input.value.trim();
+				const name = document.getElementById("userName");
+				const message = name.value.trim() + ": " + input.value.trim();
 				if (message !== "") {
 					socket.emit("chat message", message); // Send chat message to the server
 					input.value = "";
